# devcli

./: .gitignore  CHANGELOG.md  COMMANDS.md  FEATURES.md  FINAL_SHIP_CHECKLIST.md  LEARNING.md  PUBLISHING.md  README.md  RELEASE_NOTES.md  SETUP.md  SHIP_IT.md  demo.py  demo_fixes.py  demo_interactive.py  demo_output.py  demo_output_modes.py  demo_project.py  install.sh  pyproject.toml
docs/: GITHUB_PAGES_SETUP.md  index.html
src/devcli/: __init__.py  cli.py  config.py
src/devcli/core/: context.py  file_ops.py  git_tracker.py  scanner.py  smart_context.py
src/devcli/providers/: __init__.py  base.py  ollama.py
